--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Data files
+*.pvd
+*.pvtu
+*.vtu
+*.h5
+*.xdmf
+*.bin
+*.bp
+*.msh
+
 # C extensions
 *.so
 
