28 awg tested, something wrong with 30awg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ where = ["src"]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+
+[tool.setuptools.package-data]
+"pulsevad.data" = ["cable_data.csv"]
